# WenQu

./: .claude  .dev-spec-kit  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  RUNNING.md  Source_Map_404 错误修复.md  UI 布局更新说明.md  build.sh  main.py  models  particles.js 修复说明.md  pyproject.toml  start.sh  test.sh  test_websocket.py  布局调整完成总结.md  清除浏览器缓存指南.md  用户输入框位置调整说明.md
.chainlit/: config.toml
app/Gui/: gui.py
app/LLMManager/: common.py  llama.py  ollama.py
app/LangChain/: agent.py  prompt.py  search.py  tools.py
app/Utils/: print.py
app/llm/: llm_llama.py
config/: README.md  config.ini
data/: WenQu.desktop  wenqu.sh
docs/: 001-models-prompts-parsers.ipynb  README.md  TODO.md  WebSocket 功能说明.md  文档维护指南.md  访问指南.md  需求说明.md
examples/: chainlit-stream.py
src/: __init__.py  config.py
src/agent/: __init__.py  agent_core.py  langchain_integration.py
src/agents/: WenQuAgent.py
src/chat-ui/: .env  package-lock.json
src/chat-ui/apps/agents/src/research-agent/retrieval-graph/: graph.ts
src/config/: WenQuConfig.py
src/inference/: __init__.py  inference_service.py
src/rag/: __init__.py  db_config.py  embedding.py  init_db.py  llama_index_integration.py  models.py  rag_service.py  test_db_connection.py
src/server/: __init__.py  main.py
src/server/static/: diagnose.html  index.html  test_anime.html  test_compact.html  test_layout.html  test_multi_turn.html  test_ws.html
src/server/static/assets/: anime.min.js  app.js  particles.min.js  styles.css
tests/: langchain_prompt.py  llm.py  print.py
